=======
CHANGES
=======

1.1 (unreleased)
----------------

1.0 (2009-07-07)
----------------
 - Map shipping organization name [larubbio]
 - Map shipping and billing names [larubbio]

1.0b3 (2009-07-07)
------------------

 - Fix a bug joining address lines together if address line 2 wasn't provided
 - Add shipping information
 - handle ship address same as billing address
 - map organization name

1.0b2 (2009-05-12)
------------------

 - Add recording of discount code if one is present

1.0b1
------------------

 - Functional adapter
 - Small set of funit tests written

1.0-alpha1
------------------

 - Initial import and creation of standalone based off of salesforcepfgadapter
